XForms bug 293951 - Shouldn't be altering default namespace during submission. r=aaronr,smaug a=mkaply